Fix: 네브바 및 드롭다운에 백그라운드 컬러 및 z-index추가

--- a/src/components/Nav/Dropdown/Dropdown.scss
+++ b/src/components/Nav/Dropdown/Dropdown.scss
@@ -8,6 +8,7 @@ ul.dropdown {
   transform-origin: top;
   transform: scale(1, 0);
   transition: transform 0.5s ease-out;
+  background: #fff;
 
   li {
     padding: 1em 0;
